:sparkles:  [https://github.com/maykinmedia/sharing-configs/issues/23] paginate folders
